chapter5/kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  tls:
    - hosts:
        - kubia.example.com
    - secretName: tls-secret
  rules:
    - host: kubia.example.com
      http:
        paths:
          - pathType: Prefix
            path: /kubia
            backend:
              service:
                name: kubia-nodeport
                port:
                  number: 80
          - pathType: Prefix
            path: /foo
            backend:
              service:
                name: bar
                port:
                  number: 80
